crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_body_too_short.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: Canvas board · space: Plugins · fetched"
" Enter detail · r refresh · ? help · q quit                           "
"                             1/5                              Todo 1 ›"
" body too short for a card; make the pane taller                      "
"                                                                      "
"                                                                      "
