crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_card_two_line_title_36.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: "rows.join(\"\\n\")"
---
 Linear  Frame Effects · view: Canva
 Enter detail · r refresh · ? help ·
┌ Backlog (1) ─────────────────────┐
│WEB-3308  P0                      │
│Example issue: the panel stays    │
│blank while a long list of items …│
│@Example User                     │
│                                  │
│                                  │
│                                  │
│                                  │
│                                  │
│                                  │
│                                  │
│                                  │
└──────────────────────────────────┘
 Spaces with no project · s select …
    Beta notes (wB)                 
    Gamma docs (wC)
