crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_detail.snap
---
source: crates/board-tui/tests/linear/mod.rs
assertion_line: 350
expression: frame
---
" WEB-3312                                                                                                               "
"                                                                                                                        "
"Example issue: a saved item is empty after reload                                     Status    In Progress             "
"                                                                                      Priority  P2                      "
"The saved item comes back empty.                                                      Assignee  Example User            "
"                                                                                      Labels    —                       "
"Only after a reload.                                                                  Project   AI Canvas Tools         "
"                                                                                      Milestone M2                      "
"Sub-issues  1/2                                                                       Cycle     Cycle 14                "
"  WEB-3319  Per-issue fetch  Done                                                     Estimate  3                       "
"  WEB-3320  Markdown renderer  Todo                                                   Due       2026-09-30              "
"                                                                                                                        "
"Activity                                                                              Parent                            "
"  Example User moved to In Progress · 1h                                                WEB-2870  Tool: Detach Foregrou…"
"  Example User commented · 20m                                                                                          "
"    Reproduced on staging.                                                            Relations                         "
"    ↳ Other User · just now                                                             blocks                          "
"      Same here.                                                                        WEB-3400  Ship the drawer  Todo "
"                                                                                                                        "
"                                                                                      Board                             "
"                                                                                      [bound] …ANDBOX/worktrees/web-3312"
"                                                                                        tab: Plugin PM (wA:t1)          "
"                                                                                        wA:p1  idle                     "
"                                                                                      ▶ wA:p2  working                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" j/k move · Enter open · o focus pane · u Linear · y copy · b bind · Esc back                                           "
