crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_help.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame ┌ Help — Linear mode ────────────────────────────────────────────────────────────────────┐               "
" Enter detail ·│board                                                                                  ▲│               "
"               │  ←/→ h/l      focus column                                                            █│   Dev Done 0 ›"
"┌ Backlog (1) ─│  ↑/↓ k/j      focus card                                                              █│──────────────┐"
"│  WEB-3308  P0│  [ / ]        previous / next tab                                                     █│              │"
"│Example issue:│  < / >        prev / next column page                                                 █│tem is empty  │"
"│an item is sti│  Enter        detail; clears its marks                                                █│              │"
"│@Example User │  a            accept: ◇ bind, else show                                               █│              │"
"│              │  x            dismiss: ◇, else request                                                █│              │"
"│              │  n / N        next / prev marked card                                                 █│              │"
"│              │  r / R        refresh snapshot                                                        █│              │"
"│              │  ?            this help (any screen)                                                  ││              │"
"│              │  ↑/↓ k/j      scroll this help                                                        ││              │"
"│              │  q / Esc      quit                                                                    ││              │"
"│              │  s            focus the spaces strip                                                  ││              │"
"│              │  t            strip: spaces / tabs                                                    ││              │"
"│              │  ↑/↓ k/j      strip: select a space                                                   ││              │"
"│              │  Enter        strip: choose a project                                                 ││              │"
"│              │  Esc          strip: back to the board                                                ││              │"
"│              │  v            choose a view to bind                                                   ││              │"
"│              │  click        open card / focus column                                                ││              │"
"│              │  click strip  choose a project for it                                                 ││              │"
"│              │  click view   choose a view to bind                                                   ││              │"
"│              │  wheel        focus card                                                              ││              │"
"│              │card detail                                                                            ││              │"
"│              │  ↑/↓ k/j      select pane                                                             ││              │"
"│              │  o            focus selected pane                                                     ││              │"
"└──────────────│  u            open issue in Linear                                                    ││──────────────┘"
" Spaces with no│  y            copy worktree path                                                      ││               "
"    Beta notes │  b            bind selected worktree                                                  ▼│               "
"    Gamma docs │↑/↓ k/j scroll · 31 more below · any other key closes                                   │               "
"               └────────────────────────────────────────────────────────────────────────────────────────┘               "
