crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_help_herdr_keys.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame ┌ Help — Linear mode ────────────────────────────────────────────────────────────────────┐               "
" Enter detail ·│not bound                                                                              ▲│               "
"               │  s            focus the spaces strip                                                  ││   Dev Done 0 ›"
"┌ Backlog (1) ─│  ↑/↓ Enter    strip: pick a project                                                   ││──────────────┐"
"│WEB-3308  P0  │  click strip  choose a project for it                                                 ││              │"
"│Example issue:│  t            strip: spaces / tabs                                                    ││tem is empty  │"
"│an item is sti│  r / R        refresh after a bind                                                    ││              │"
"│@Example User │  Esc          strip: unfocus, else quit                                               ││              │"
"│              │  q            quit                                                                    ││              │"
"│              │snapshot failed                                                                        ││              │"
"│              │  r / R        retry the snapshot                                                      ││              │"
"│              │  Esc          dismiss, keep last good                                                 █│              │"
"│              │  q            quit                                                                    █│              │"
"│              │daemon older than board                                                                █│              │"
"│              │  r / R        retry the snapshot                                                      █│              │"
"│              │  q / Esc      quit                                                                    █│              │"
"│              │picker                                                                                 █│              │"
"│              │  type / Bksp  filter text; ? r q too                                                  █│              │"
"│              │  ↑/↓ Enter    move / choose                                                           █│              │"
"│              │  Esc          clear filter, then close                                                █│              │"
"│              │  click        choose that row                                                         ││              │"
"│              │herdr (your config)                                                                    ││              │"
"│              │  ctrl+b        prefix                                                                 ││              │"
"│              │  ctrl+alt+1..9 switch tab                                                             ││              │"
"│              │  ctrl+alt+t    new tab                                                                ││              │"
"│              │  ctrl+alt+q    close tab                                                              ││              │"
"│              │  ctrl+alt+w    workspace picker                                                       ││              │"
"└──────────────│  ctrl+alt+m    example-viewer: open-example                                           ││──────────────┘"
" Spaces with no│  ctrl+alt+k    example.picker: pick                                                   ││               "
"    Beta notes │  ctrl+alt+d    open the example dashboard                                             ▼│               "
"    Gamma docs │any other key closes                                                                    │               "
"               └────────────────────────────────────────────────────────────────────────────────────────┘               "
