crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_lanes_140.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: project issues (default) · space: Plugins · fetched 0s ago                                                   "
" Enter detail · r refresh · ? help · q quit                                                                                                 "
" [Frontend]  Backend                                                                                                                        "
"                                                                1/2                                                                 Done 1 ›"
"┌ Todo (4) ──────────────────────────────────┐┌ In Progress (2) ───────────────────────────┐┌ In Review (1) ─────────────────────────────┐  "
"│── Alpha 3 ─────────────────────────────────││── Alpha 1 ─────────────────────────────────││── Beta 1 ──────────────────────────────────│  "
"│WEB-101  P3                                 ││WEB-105 ▶  P3  ⧉1                           ││WEB-107  P3                                 │  "
"│Example issue: the export dialog forgets its││Example issue: a saved filter loses its sort││Example issue: a shared link opens the wrong│  "
"│last folder                                 ││order                                       ││page                                        │  "
"│unassigned                                  ││unassigned                                  ││unassigned                                  │  "
"│                                            ││                                            ││                                            │  "
"│WEB-102  P3                                 ││── Beta 1 ──────────────────────────────────││                                            │  "
"│Example issue: a toolbar icon is blurry on a││WEB-106  P3                                 ││                                            │  "
"│wide screen                                 ││Example issue: the preview pane flickers on ││                                            │  "
"│unassigned                                  ││resize                                      ││                                            │  "
"│                                            ││unassigned                                  ││                                            │  "
"│WEB-103  P3                                 ││                                            ││                                            │  "
"│Example issue: the undo stack drops a rename││                                            ││                                            │  "
"│                                            ││                                            ││                                            │  "
"│unassigned                                  ││                                            ││                                            │  "
"│                                            ││                                            ││                                            │  "
"│── Beta 1 ──────────────────────────────────││                                            ││                                            │  "
"│WEB-104  P3                                 ││                                            ││                                            │  "
"│Example issue: a long list scrolls past its ││                                            ││                                            │  "
"│last row                                    ││                                            ││                                            │  "
"│unassigned                                  ││                                            ││                                            │  "
"│                                            ││                                            ││                                            │  "
"│                                            ││                                            ││                                            │  "
"└────────────────────────────────────────────┘└────────────────────────────────────────────┘└────────────────────────────────────────────┘  "
"                                                                                                                                            "
