crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_lanes_44.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: project issue"
" Enter detail · r refresh · ? help · q quit "
" [Frontend]  Backend                        "
"‹ Todo 4          2/4          In Review 1 ›"
"┌ In Progress (2) ─────────────────────────┐"
"│── Alpha 1 ───────────────────────────────│"
"│  WEB-105 ▶  P3  ⧉1                       │"
"│Example issue: a saved filter loses its   │"
"│sort order                                │"
"│unassigned                                │"
"│                                          │"
"│── Beta 1 ────────────────────────────────│"
"│  WEB-106  P3                             │"
"│Example issue: the preview pane flickers  │"
"│on resize                                 │"
"│unassigned                                │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"└──────────────────────────────────────────┘"
"                                            "
